<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_radius_dialog"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:gravity="center"
        android:minHeight="50dp"

        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="@string/dialog_withdraw_title" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:gravity="center"
        android:minHeight="20dp"

        android:textColor="@color/gray1"
        android:textSize="14sp"
        tools:text="@string/dialog_withdraw_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/shape_mypage_outline_btn"
            android:fontFamily="@font/nanumsquare_extra_bold"
            android:text="@string/dialog_cancel"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_withdraw"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/shape_mypage_fill_btn"
            android:fontFamily="@font/nanumsquare_extra_bold"
            android:text="@string/text_withdrawal"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>