<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_radius_dialog"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:gravity="center"
        android:lineSpacingExtra="6sp"
        android:minHeight="50dp"

        android:textColor="@color/black"
        android:textSize="18sp"
        app:lineHeight="24sp"
        tools:text="@string/dialog_check_exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/shape_quiz_entry_fill_btn"
            android:fontFamily="@font/nanumsquare_extra_bold"
            android:text="@string/dialog_continue"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@drawable/shape_mypage_outline_btn"
            android:fontFamily="@font/nanumsquare_extra_bold"
            android:text="@string/dialog_exit2"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>