<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5">

    <TextView
        android:id="@+id/tv_mypage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/white"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:gravity="center"
        android:includeFontPadding="false"

        android:paddingTop="40dp"
        android:text="@string/text_my_page"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_header"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"

        android:contentDescription="@string/content_description_profile"
        android:scaleType="fitXY"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        tools:ignore="NewApi,UnusedAttribute"
        tools:src="@drawable/img_default_profile" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        tools:text="nickname" />

    <View
        android:id="@+id/view_my_info"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/shape_radius_top_12"

        app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:text="@string/text_my_info"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@id/view_my_info"
        app:layout_constraintStart_toStartOf="@id/view_my_info"
        app:layout_constraintTop_toTopOf="@id/view_my_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/nanumsquare_bold"

        android:text="@string/text_modify_my_info"
        android:textColor="@color/gray7"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@id/view_my_info"
        app:layout_constraintEnd_toEndOf="@id/view_my_info"
        app:layout_constraintTop_toTopOf="@id/view_my_info" />

    <ImageButton
        android:id="@+id/iv_modify"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"

        android:background="@color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_right"

        app:layout_constraintBottom_toBottomOf="@id/view_my_info"
        app:layout_constraintEnd_toEndOf="@id/view_my_info"
        app:layout_constraintTop_toTopOf="@id/view_my_info" />

    <View
        android:id="@+id/view_policy"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"

        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/view_my_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:text="@string/text_policy"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@id/view_policy"
        app:layout_constraintStart_toStartOf="@id/view_policy"
        app:layout_constraintTop_toTopOf="@id/view_policy" />

    <ImageButton
        android:id="@+id/iv_policy"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"

        android:background="@color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_right"

        app:layout_constraintBottom_toBottomOf="@id/view_policy"
        app:layout_constraintEnd_toEndOf="@id/view_policy"
        app:layout_constraintTop_toTopOf="@id/view_policy" />

    <View
        android:id="@+id/view_app_version"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"

        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/view_policy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:text="@string/text_app_version"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@id/view_app_version"
        app:layout_constraintStart_toStartOf="@id/view_app_version"
        app:layout_constraintTop_toTopOf="@id/view_app_version" />

    <View
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"

        android:background="@drawable/shape_radius_bottom_12"
        app:layout_constraintTop_toBottomOf="@id/view_app_version" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nanumsquare_extra_bold"
        android:text="@string/text_logout"
        android:textColor="@color/red"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@id/btn_logout"
        app:layout_constraintStart_toStartOf="@id/btn_logout"
        app:layout_constraintTop_toTopOf="@id/btn_logout" />


</androidx.constraintlayout.widget.ConstraintLayout>